test_translator/tests/data/checkpoint_1/errors/18_no_matching_entrypoint/tests.py
# Tests exist but none call the specified entrypoint
assert other_func(1) == 1
assert another_func(2) == 2
assert something_else(3) == 3
